# fforge

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
docs/: ATTRIBUTE_SCHEMA.md  DESIGN.md  DEVELOPMENT_MODEL.md  MATCH_MODEL.md  TACTICS_MODEL.md  TRANSFER_MODEL.md
fforge-core/: CLAUDE.md  Cargo.toml
fforge-core/src/: career_arc.rs  club_ai.rs  commands.rs  development.rs  event.rs  finance.rs  lib.rs  market.rs  match_engine.rs  news.rs  observer.rs  pool.rs  rng.rs  schedule.rs  session.rs  state.rs  valuation.rs  worldgen.rs
fforge-core/src/market/: calibrate.rs
fforge-core/src/match_engine/: calibrate.rs  contest.rs  knobs.rs  resolve.rs  stream.rs  tactics.rs  zone.rs
fforge-domain/: CLAUDE.md  Cargo.toml
fforge-domain/src/: ability.rs  attributes.rs  character.rs  date.rs  entities.rs  formation.rs  lib.rs  role.rs  tactics.rs
fforge-game/: CLAUDE.md  Cargo.toml
fforge-game/src/: main.rs
