[package]
name = "fforge-game"
version.workspace = true
edition.workspace = true
description = "Basic CLI implementation for the Football Forge game."
license = "Apache-2.0"

[[bin]]
name = "fforge-game"
path = "src/main.rs"

[dependencies]
fforge-domain = { path = "../fforge-domain", version = "0.1.0" }
fforge-core = { path = "../fforge-core", version = "0.1.0" }