[package]
name = "fforge-game"
version = "0.2.0"
edition.workspace = true
description = "Basic CLI implementation for the Football Forge game."
license = "Apache-2.0"

[[bin]]
name = "fforge-game"
path = "src/main.rs"

[dependencies]
fforge-domain = { path = "../fforge-domain", version = "0.2.0" }
fforge-core = { path = "../fforge-core", version = "0.2.0" }
crossterm = "0.28"